11-Aplicacion/k8s/02-deploymentMariadb.yml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: mariadb-deployment
  namespace: udemy
spec:
  selector:
    matchLabels:
      app: mariadb
  replicas: 1 
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers: 
      - name: mariadb
        image: gwfernandez/kubernetesmariadb:latest
        ports:
        - containerPort: 3306
      imagePullSecrets:
        - name: regsecret
