11-Aplicacion/k8s/03-deploymentWildFly.yml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: wildfly-deployment
  namespace: udemy  
spec:
  selector:
    matchLabels:
      app: wildfly
  replicas: 1 
  template:
    metadata:
      labels:
        app: wildfly
    spec:
      containers:
      - name: wildfly
        image: gwfernandez/kuberneteswildfly:latest
        ports:
        - containerPort: 8080
      imagePullSecrets:
        - name: regsecret
