11-Aplicacion/k8s/05-servicioWildfly.yml
apiVersion: v1
kind: Service
metadata:
  name: wildfly-service
  namespace: udemy  
spec:
  selector:
    app: wildfly
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
