11-Aplicacion/k8s/06-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wildfly-ingress
  namespace: udemy  
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: wildfly-service
          servicePort: 8080
